# AuroreNR

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SimulationWindow.cpp  SimulationWindow.h  main.cpp  resources.qrc  version.h
